# gnugo

engine/: CMakeLists.txt
interface/: CMakeLists.txt
patterns/: CMakeLists.txt
sgf/: CMakeLists.txt
utils/: CMakeLists.txt
